fix: add z-index to btn-favorite

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -63,6 +63,7 @@ main {
   top: auto;
   left: 15px;
   position: absolute;
+  z-index: 500;
 }
 
 .session-card{
